Limit app install methods #11738 (#11739)
---------

Co-authored-by: Aliaksandr Shklianko <asl@enonic.com>